--- a/Lab_3/style.css
+++ b/Lab_3/style.css
@@ -125,12 +125,13 @@ aside {
 
 aside a {
   display: block;
+  float: left;
   width: 50%;
 }
 
 aside img {
   max-width: 100%;
-  display:flex
+
 }
 
 footer {
