--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -44,96 +44,19 @@ html, body {
     line-height: 1.5;
   }
   
-  /* || header layout */
+  /* || layout */
   
-  header {
-    margin-bottom: 10px;
+  .header{
+    background-color: rgba(52, 65, 109, 0.938);
     display: flex;
-    flex-flow: row wrap;
+ 
   }
-  
-  body > * {
-    background-color: red;
-    padding: 1%;
-  }
-  
-  main, header, nav, article, aside, footer, section {
-    background-color: rgba(0,255,0,0.5);
-    padding: 1%;
-  }
-  
-  h1 {
-    flex: 5;
-    text-transform: uppercase;
-  }
-  
-  header img {
+
+  .header img {
     display: block;
-    height: 60px;
+    height: 200px;
     padding-top: 20.15px;
-  }
-  
-  nav {
-    height: 50px;
-    flex: 100%;
-    display: flex;
-  }
-  
-  nav ul {
-    padding: 0;
-    list-style-type: none;
-    flex: 2;
-    display: flex;
-  }
-  
-  nav li {
-    display: inline;
-    text-align: center;
-    flex: 1;
-  }
-  
-  nav a, nav span {
-    display: inline-block;
-    font-size: 2rem;
-    height: 3rem;
-    line-height: 1.7;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: black;
-  
-  }
-  
+
+
   /* || main layout */
   
-  main {
-    display: flex;
-  }
-  
-  article, section {
-    flex: 4;
-  }
-  
-  aside {
-    flex: 1;
-    margin-left: 10px;
-    padding: 1%;
-  }
-  
-  aside a {
-    display: block;
-    width: 50%;
-  }
-  
-  .img_row{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  aside img {
-    max-width: 100%;
-  
-  }
-  
-  footer {
-    margin-top: 10px;
-  }
