--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -1,62 +1,79 @@
-/* || General setup */
+@media (max-width: 1000px) {
+    .content{
+        display: flex;
+    
+    }
+  
+    }
 
-html, body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  html {
-    font-size: 10px;
-    background-color: #88bdf8;
-  }
-  
-  body {
-    width: 70%;
-    min-width: 800px;
-    margin: 0 auto;
-  }
-  
-  /* || typography */
-  
-  h1, h2 {
-    font-family: 'Srisakdi', cursive;
-    color: #2a2a2a;
-  }
-  
-  p, li {
-    font-family: 'Roboto Condensed', sans-serif;
-    color: #2a2a2a;
-  }
-  
-  h1 {
-    font-size: 4rem;
-    text-align: center;
-    text-shadow: 2px 2px 10px black;
-  }
-  
-  h2 {
-    font-size: 3rem;
-    text-align: center;
-  }
-  
-  p, li {
-    font-size: 1.6rem;
-    line-height: 1.5;
-  }
-  
-  /* || layout */
-  
-  .header{
+.header{
     background-color: rgba(52, 65, 109, 0.938);
     display: flex;
+    flex-wrap: wrap;
+}
+    
+
+.header{
+    font-family: 'Sansita Swashed', cursive;
+    font-size: 30px;
+    color: #eff8c6;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.header img{
+    display: flex;
+    height: 150px;
+    padding: 20px 20px;
+    
+}
+
+.wrapper{
+    background-color: cornflowerblue;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 15px;
+}
+
+.content{
+    background-color: coral;
+    margin-top: 15px;
+   
+    width: 960px;
+    justify-content: space-around;
+}
+.content{
+    
+    font-family: 'Allan', cursive;
+    font-size: 20px;
+    padding:20px ;
+    margin: 10px;
+    
+
+   
+}
+.content img{
+   
+    border: 1px red solid;
+    border-radius: 4px ;
+    width: 33%;
+    flex-direction: column;
+
+}
+
+.experience{
+    background-color:  coral;
+   
+    display: flex;
+    width: 66.6%;
+}
+.experience{
+    font-family: 'Allan', cursive;
+    font-size: 20px;
+    flex: 1;
+    flex-wrap: wrap;
+    
  
-  }
-
-  .header img {
-    display: block;
-    height: 200px;
-    padding-top: 20.15px;
-
-
-  /* || main layout */
-  
+}
