--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -1,72 +1,5 @@
-@media (max-width: 1000px) {
-    .content{
-        display: flex;
-    
-    }
-  
-    }
-
-.header{
-    background-color: rgba(52, 65, 109, 0.938);
-    display: flex;
-    flex-wrap: wrap;
-}
-    
-
-.header{
+,header{
     font-family: 'Sansita Swashed', cursive;
     font-size: 30px;
-    color: #eff8c6;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.header img{
-    display: flex;
-    height: 150px;
-    padding: 20px 20px;
-    
-}
-
-.wrapper{
-    background-color: cornflowerblue;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 15px;
-}
-
-.content{
-    background-color: coral;
-    margin-top: 15px;
-    width: 960px;
-    justify-content: space-around;
-}
-.content{
-    font-family: 'Allan', cursive;
-    font-size: 20px;
-    padding:20px ;
-    margin: 10px;
-    
-}
-.content img{
-    border: 1px red solid;
-    border-radius: 4px ;
-    width: 33%;
-    flex-direction: column;
-
-}
-
-.experience{
-    background-color:  coral;
-    display: flex;
-    width: 66.6%;
-}
-.experience{
-    font-family: 'Allan', cursive;
-    font-size: 20px;
-    flex: 1;
-    flex-wrap: wrap;
-    
 }
