--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -1,5 +1,34 @@
-,header{
+.header{
+    background-color:rgba(52, 65, 109, 0.938);
+    display: flex;
+    flex-wrap: wrap;
+}
+.header{
     font-family: 'Sansita Swashed', cursive;
     font-size: 30px;
+    color: #eff8c6;
+    justify-content: space-between;
+    align-items: center;
+}
+.wrapper{
+    background-color: darkred;
     display: flex;
+    padding: 15px;
+    
+    
+}
+.content{
+    background-color: darkgrey;
+    max-width: 960px;
+   
+}
+.content p{
+    border:5px green solid;
+}
+.content img{
+    max-width: 33.3%;
+    border: 1px red solid;
+    border-radius: 4px;
+    justify-content: space-around;
+  
 }
