--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -2,77 +2,58 @@
     background-color:rgba(52, 65, 109, 0.938);
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 5px;
+    align-items: center;
 }
 .header{
     font-family: 'Sansita Swashed', cursive;
     font-size: 30px;
     color: #eff8c6;
-    justify-content: space-between;
-    align-items: center;
 }
 .header img{
-    display: flex;
-    height: 150px;
-    padding: 20px 20px;
+    max-height: 150px;
 }
-
 .wrapper{
     background-color: darkred;
-    padding: 15px;
     display: flex;
     justify-content: center;
-    align-items: center;
     max-width: 960px;
-    flex: 1;
+    border: blue 5px solid;
+    margin: auto;
 }
-}
-
 .content{
-    display: flex;
-    
-    max-width: 33.3%;
-    flex-wrap: wrap;
-    
-    
-}
-.content p{
-    font-family: 'Allan', cursive;
-    font-size: 20px;
     flex: 1;
-    
-    border:5px green solid;
-    display: flex;
-    text-align: center;
-   
+    border: purple 5px solid;
+    margin: auto;
 }
 .content img{
-    
-    margin-left:150px;
-    max-width: 33.3%;
     border: 1px red solid;
     border-radius: 4px;
+    max-width: 33.3%;
    
+   
+}
+.content p{
+    flex-wrap: wrap;
+    border: rgb(202, 115, 33) 5px solid;
+    max-width: 33.3%;
+    align-items: flex-start;
 
 }
 .experience{
+    flex: 3;
     background-color: wheat;
-    font-family: 'Allan', cursive;
-    font-size: 20px;
-    flex-wrap: wrap;
-    flex: 2 1 auto;
-    max-width: 66%;
+    
 }
 
-@media screen (max-width: 1000px){
+@media (max-width: 1000px){
     .wrapper{
-        display: flex;
-        
+        display: block;
     }
     .content{
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-
+        justify-content: space-evenly;
     }
 
 }
