--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -37,7 +37,8 @@
     display: flex;
     flex-wrap: wrap;
     border: rgb(202, 115, 33) 2px solid;
-    
+    max-width: 33.3%;
+    margin-left: auto;
     justify-content: center;
   
     
@@ -47,9 +48,8 @@
     display: flex;
     border: 1px red solid;
     border-radius: 4px;
-  
     margin-left: auto;
-    
+    max-width: 33.3%;
     justify-content: center;
 }
 .experience{
