--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -19,26 +19,25 @@
     display: flex;
     padding: 15px;
     justify-content: center;
-
 }
 .content{
     display: flex;
     max-width: 960px;
-    border: rgb(154, 137, 250) 5px solid;
-    justify-content: center;
+    border: rgb(154, 137, 250) 1px solid;
+   
 }
 .goal{
-    border: rgb(91, 221, 112) 5px solid;
-}    
-    
+    flex: 1;
+}
 
     
 .goal p{
     display: flex;
     flex-wrap: wrap;
-    border: rgb(202, 115, 33) 2px solid;
-    max-width: 33.3%;
-    margin-left: auto;
+    border: rgb(202, 115, 33) 1px solid;
+   
+    margin: auto;
+    
     justify-content: center;
   
     
@@ -48,13 +47,14 @@
     display: flex;
     border: 1px red solid;
     border-radius: 4px;
-    margin-left: auto;
-    max-width: 33.3%;
+    margin: auto;
+    
     justify-content: center;
 }
 .experience{
-    background-color: wheat;
-    flex: 66%;
+    border:1px violet solid;
+    background-color:wheat;
+    flex:3;
 }
 
 @media (max-width: 1000px){
@@ -62,11 +62,12 @@
         display: block;
     }
     .content{
-        display: flex;
+        display: block;
    
     }
     .goal{
         display: flex;
+        flex-direction: row;
         justify-content: space-evenly;
     }
     .experience{
