--- a/Assignment_1/style.css
+++ b/Assignment_1/style.css
@@ -21,9 +21,11 @@
     justify-content: center;
 }
 .content{
+    font-family: 'Allan', cursive;
+    font-size: 20px;
     display: flex;
     max-width: 960px;
-    border: rgb(154, 137, 250) 1px solid;
+  
    
 }
 .goal{
@@ -48,7 +50,7 @@
     justify-content: center;
 }
 .experience{
-    border:1px violet solid;
+   
     background-color:wheat;
     flex:3;
 }
@@ -59,12 +61,14 @@
     }
     .content{
         display: block;
+        
    
     }
     .goal{
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+        margin-bottom: 15px;
     }
   
     .goal p{
