--- a/Lab_6/css/form_styles.css
+++ b/Lab_6/css/form_styles.css
@@ -23,7 +23,7 @@ li {
 
 label {
     display: block;
-    font-weight: bold
+    font-weight: bold;
 }
 button{
     background-color: rgb(226, 118, 45);
